# This file lists all libtommath files and include paths.
# It can be included from the CMakeLists.txt file of an application.

# minimum 3.16 for precompiled headers
cmake_minimum_required(VERSION 3.16)
project("libtommath")

# --- Project source files ---------------------------------------------------------------------------------------------
#basic infrastructure (also requires Windows target layer, or a corresponding implementation for e.g. Linux)
set(LIBTOMMATH_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_cutoffs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_deprecated.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_2expt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_abs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_addmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_add_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_and.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_clamp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_clear.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_clear_multi.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_cmp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_cmp_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_cmp_mag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_cnt_lsb.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_complement.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_copy.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_count_bits.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_decr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_div_2.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_div_2d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_div_3.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_div_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_dr_is_modulus.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_dr_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_dr_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_error_to_string.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_exch.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_exptmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_expt_u32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_exteuclid.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_fread.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_from_sbin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_from_ubin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_fwrite.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_gcd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_double.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_ll.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_mag_u32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_mag_u64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_mag_ul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_get_mag_ull.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_grow.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_incr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_copy.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_ll.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_multi.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_set.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_u32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_u64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_ul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_init_ull.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_invmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_iseven.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_isodd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_is_square.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_kronecker.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_lcm.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_log_u32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_lshd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mod_2d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mod_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_montgomery_calc_normalization.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_montgomery_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_montgomery_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mulmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mul_2.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mul_2d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_mul_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_neg.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_or.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_pack.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_pack_count.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_fermat.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_frobenius_underwood.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_is_prime.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_miller_rabin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_next_prime.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_rabin_miller_trials.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_rand.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_prime_strong_lucas_selfridge.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_radix_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_radix_smap.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_rand.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_read_radix.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_2k.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_2k_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_2k_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_2k_setup_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_is_2k.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_is_2k_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_reduce_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_root_u32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_rshd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sbin_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_double.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_ll.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_u32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_u64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_ul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_set_ull.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_shrink.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_signed_rsh.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sqrmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sqrtmod_prime.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_submod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_sub_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_to_radix.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_to_sbin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_to_ubin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_ubin_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_unpack.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_xor.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_mp_zero.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_prime_tab.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_balance_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_exptmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_exptmod_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_get_bit.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_invmod_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_invmod_slow.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_karatsuba_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_karatsuba_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_montgomery_reduce_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_mul_digs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_mul_digs_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_mul_high_digs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_mul_high_digs_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_prime_is_divisible.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_rand_jenkins.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_rand_platform.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_reverse.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_sqr_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_toom_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bn_s_mp_toom_sqr.c

    ${CMAKE_CURRENT_SOURCE_DIR}/tommath.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tommath_class.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tommath_cutoffs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tommath_private.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tommath_superclass.h
)

set(LIBTOMMATH_INCLUDE_DIRECTORIES
   ${CMAKE_CURRENT_SOURCE_DIR}
)

# define library target including all sources
add_library(libtommath ${LIBTOMMATH_SOURCES})

# add all include directories to library target and make public
target_include_directories(libtommath PUBLIC ${LIBTOMMATH_INCLUDE_DIRECTORIES})
